# lib/db/src/schema/index.ts
@@ -3,4 +3,5 @@ export * from "./screenings";
 export * from "./ercot_node_stats";
 export * from "./ercot_nodal_stats";
 export * from "./caiso_node_stats";
+export * from "./pjm_node_stats";
 export * from "./queue_projects";
